# 2025Fall_ISM_Project

./: .gitignore  README.md  ism.ipynb  pyproject.toml  requirement.txt  requirements.txt  setup.py  test.py
.github/workflows/: python-tests.yml  python-tests.yml.yaml
notebook/: ism copy.ipynb  ism.ipynb
notebooks/: ism.ipynb
src/: test.py
src/2025ISM_FinalProject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ExtractSpec/: __init__.py  paths.py  utils.py
src/jwst_utils/: __init__.py  __main__.py  utils.py
src/yourproject.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_analysis_utils.py  test_io_utils.py  test_physics_utils.py  test_utils.py
