[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2025ISM_FinalProject"
version = "0.1.0"
description = "Astro utilities using NumPy, Astropy, Matplotlib, SciPy"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{ name = "Kuo-Jui Wu" }]

# Runtime deps based on your imports
dependencies = [
  "numpy>=1.23,<3",          # safe with modern SciPy/Astropy
  "scipy>=1.10",
  "astropy>=5.0",
  "matplotlib>=3.7"
  # mpl_toolkits.axes_grid1 ships with matplotlib (no extra line needed)
  # glob, os, copy are from the Python standard library (no extra line needed)
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black",
  "isort",
  "flake8",
  "pre-commit"
]

[project.urls]
Homepage = "https://github.com/yourname/yourproject"
Issues = "https://github.com/yourname/yourproject/issues"

# (Optional) CLI entry point if you later add src/yourproject/cli.py with main()
# [project.scripts]
# yourproject = "yourproject.cli:main"
